syntax = "proto3";

option go_package = "github.com/sandokandias/grpc-consumer-research/backend/grpc/api";

package proto;

service TimeService {
	rpc get_time (TimeRequest) returns (TimeResponse);
}
 
message TimeRequest {}

message TimeResponse {
	int64 unix = 1;
    string utc = 2;
	Error error = 3;
}

message Error {
	string code = 1;
	string message = 2;
}